--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         
         <title>Ma recette du gâteau au chocolat</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="Recette.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="Recette_Resp.css">
     </head>
     <body >
         
